static/frontend: fix alignment of empty gopher message
On larger displays the empty gopher text starts to drift out
of center because we've set the max width for paragraphs to
960px. This change centers the text element within its
parent container.

Reviewed-on: https://go-review.googlesource.com/c/pkgsite/+/345110
Trust: Jamal Carvalho <jamal@golang.org>
Trust: Julie Qiu <julie@golang.org>
Run-TryBot: Julie Qiu <julie@golang.org>
TryBot-Result: kokoro <noreply+kokoro@google.com>

--- a/static/frontend/unit/main/_doc.css
+++ b/static/frontend/unit/main/_doc.css
@@ -35,6 +35,9 @@
   height: 7.8125rem;
   width: auto;
 }
+.UnitDoc-emptySection p {
+  margin: 1rem auto;
+}
 .UnitDoc .Documentation h4 {
   margin-top: 1.5rem;
 }
